--- a/src/Authentication/styles.css
+++ b/src/Authentication/styles.css
@@ -1,11 +1,15 @@
 .Form {
-    border: 2px solid #3E4095;
-    border-radius: 10px;
-    padding: 20px;
-    margin-top: 15%;
+    border: 0px solid #3E4095;
+    border-radius: 0px;
+    padding: 30px;
+    margin-top: 10%;
+
+    box-shadow: 0px 0px 6px 2px rgba(148,141,141,0.75);
+    -webkit-box-shadow: 0px 0px 6px 2px rgba(148,141,141,0.75);
+    -moz-box-shadow: 0px 0px 6px 2px rgba(148,141,141,0.75);
 }
 .Form h5{
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 700;
     color: #3E4095;
     text-align: center;
@@ -19,18 +23,51 @@
     color: #3E4095;
 }
 .Form input{
-    height: 40px;
-    border: 1px solid #3E4095;
+    height: 50px;
+    border: 0px solid #3E4095;
+    border-radius: 0px;
+    font-size: 14px;
+
+    box-shadow: 0px 0px 3px 2px rgba(212,212,212,0.75);
+    -webkit-box-shadow: 0px 0px 3px 2px rgba(212,212,212,0.75);
+    -moz-box-shadow: 0px 0px 3px 2px rgba(212,212,212,0.75);
+}
+
+
+.Form input::placeholder{
+    font-size: 13px;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 1px;
+    color: #939694;
+
 }
 .Form .button{
     text-align: center;
 }
 .Form .btn{
     width: 100%;
-    background: #3E4095;
-    color: #ffffff;
-    font-size: 16px;
+    border-radius: 0px;
+    font-size: 14px;
+    height: 40px;
     font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    box-shadow: 2px 2px 2px 1px rgba(78,78,79,0.75);
+    -webkit-box-shadow: 2px 2px 2px 1px rgba(78,78,79,0.75);
+    -moz-box-shadow: 2px 2px 2px 1px rgba(78,78,79,0.75);
+
+}
+.Form .btn.btn-success {
+    background: #0F9D58;
+    border: 0px solid #0F9D58;
+    color: #ffffff;
+
+}
+.Form .button .btn.btn-primary {
+    background: #3E4095;
+    border: 0px solid #3E4095;
+    color: #ffffff;
 }
 
 .Form .forget{
