--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500;600;700;800&display=swap');
+
+body{
+  font-family: 'Open Sans', sans-serif;
+}
+
 .Home{
   text-align: center;
   margin-top: 10%;
