--- a/src/Authentication/styles.css
+++ b/src/Authentication/styles.css
@@ -1,78 +1,280 @@
+body{
+    background: #f5f5f5;
+}
+.Auth-box{
+    border-radius: 20px;
+    background: #ffffff;
+    margin-top: 5%;
+    margin-bottom: 7%;
+    box-shadow: 0px 0px 7px 4px rgba(212,212,212,0.75);
+    -webkit-box-shadow: 0px 0px 7px 4px rgba(212,212,212,0.75);
+    -moz-box-shadow: 0px 0px 7px 4px rgba(212,212,212,0.75);
+}
+
 .Form {
     border: 0px solid #3E4095;
     border-radius: 0px;
-    padding: 30px;
+    padding: 10px 20px 30px 80px;
     margin-top: 10%;
 
-    box-shadow: 0px 0px 6px 2px rgba(148,141,141,0.75);
-    -webkit-box-shadow: 0px 0px 6px 2px rgba(148,141,141,0.75);
-    -moz-box-shadow: 0px 0px 6px 2px rgba(148,141,141,0.75);
+
 }
 .Form h5{
-    font-size: 16px;
+    font-size: 40px;
     font-weight: 700;
     color: #3E4095;
-    text-align: center;
-    margin-bottom: 20px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
+    text-align: left;
+    text-transform: initial;
 }
-.Form label{
-    font-size: 16px;
+.Form .form-group{
+    margin-bottom: 5%;
+    padding: 5px;
+}
+.Form .form-group .Input-box{
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: #3E4095;
+    background: #ffffff;
+    width: 100%;
+    height: 40px;
+    padding: 0px;
+}
+.Form .form-group label{
+    margin-top: 10px;
+    font-size: 14px;
     font-weight: 600;
     color: #3E4095;
+    padding-bottom: 0;
 }
-.Form input{
-    height: 50px;
-    border: 0px solid #3E4095;
+.Form .form-group .Input-box input{
+    border: 0px solid transparent;
     border-radius: 0px;
     font-size: 14px;
-
-    box-shadow: 0px 0px 3px 2px rgba(212,212,212,0.75);
-    -webkit-box-shadow: 0px 0px 3px 2px rgba(212,212,212,0.75);
-    -moz-box-shadow: 0px 0px 3px 2px rgba(212,212,212,0.75);
+    background: #ffffff;
+    padding: 10px 15px 0;
+    float: right;
+    width: 95%;
 }
 
-
-.Form input::placeholder{
-    font-size: 13px;
-    text-transform: uppercase;
-    font-weight: 600;
-    letter-spacing: 1px;
-    color: #939694;
-
+.Form .form-group .Input-box input:focus{
+    border: 0px solid transparent;
+    border-radius: 0px;
+    outline: none;
+    background: #ffffff;
 }
+
 .Form .button{
-    text-align: center;
+    text-align: left;
 }
 .Form .btn{
-    width: 100%;
-    border-radius: 0px;
+    width: 40%;
+    border-radius: 5px;
     font-size: 14px;
-    height: 40px;
-    font-weight: 600;
-    text-transform: uppercase;
+    height: 45px;
+    font-weight: 400;
+    text-transform: capitalize;
     letter-spacing: 1px;
-    box-shadow: 2px 2px 2px 1px rgba(78,78,79,0.75);
-    -webkit-box-shadow: 2px 2px 2px 1px rgba(78,78,79,0.75);
-    -moz-box-shadow: 2px 2px 2px 1px rgba(78,78,79,0.75);
-
 }
-.Form .btn.btn-success {
-    background: #0F9D58;
-    border: 0px solid #0F9D58;
-    color: #ffffff;
 
-}
 .Form .button .btn.btn-primary {
+    width: 30%;
+    margin: 5px 0;
+    background: #595a99;
+    border: 0px solid #595a99;
+    color: #ffffff;
+}
+
+.Form .button .btn.btn-primary:hover {
     background: #3E4095;
     border: 0px solid #3E4095;
     color: #ffffff;
 }
+.Form .Social-sign-in{
+    font-size: 14px;
+    text-decoration: none;
+    text-align: left;
+    font-weight: 600;
+    color: #3E4095;
+    padding-bottom: 0;
 
+}
+.Form .Social-sign-in-fluid{
+    width: 12%;
+    border-radius: 50%;
+    cursor: pointer;
+    padding: 5px;
+    transition: transform .2s; /* Animation */
+
+    box-shadow: 0px 0px 7px 4px rgba(212,212,212,0.75);
+    -webkit-box-shadow: 0px 0px 7px 4px rgba(212,212,212,0.75);
+    -moz-box-shadow: 0px 0px 7px 4px rgba(212,212,212,0.75);
+}
+.Form .Social-sign-in-fluid:hover {
+    transform: scale(1.3); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
 .Form .forget{
+    margin-top: 0;
+    padding-top: 0;
     font-size: 13px;
     text-decoration: none;
-    text-align: center;
+    text-align: left;
     color: red;
+    font-weight: 600;
+}
+
+
+.Form-image{
+   text-align: center;
+    margin-top: 30%;
+}
+
+.Form-image .img-fluid{
+    width: 70%;
+
+}
+
+.Form-image .img-register{
+    width: 90%;
+    margin-bottom: 40px;
+}
+.Form-image .register{
+    font-size: 15px;
+    text-align: center;
+    color: #3E4095;
+    font-weight: 600;
+}
+
+/* Media screen 600px */
+@media only screen and (max-width: 600px) {
+
+    .Auth-box{
+        margin: 10% 5% 7% 5%;
+    }
+
+    .Form {
+        border: 0px solid #3E4095;
+        border-radius: 0px;
+        padding: 10px 10px 30px 10px;
+        margin-top: 10%;
+    }
+    .Form h5{
+        font-size: 30px;
+    }
+    .Form .form-group{
+        margin-bottom: 10%;
+        padding: 5px;
+    }
+    .Form .form-group .Input-box{
+        border-bottom-width: 1px;
+        border-bottom-style: solid;
+        border-bottom-color: #3E4095;
+        background: #ffffff;
+        width: 100%;
+        height: 40px;
+        padding: 0px;
+    }
+    .Form .form-group label{
+        margin-top: 10px;
+        font-size: 14px;
+        font-weight: 600;
+        color: #3E4095;
+        padding-bottom: 0;
+    }
+    .Form .form-group .Input-box input{
+        border: 0px solid transparent;
+        border-radius: 0px;
+        font-size: 14px;
+        background: #ffffff;
+        padding: 10px 15px 0;
+        float: right;
+        width: 90%;
+    }
+
+    .Form .form-group .Input-box input:focus{
+        border: 0px solid transparent;
+        border-radius: 0px;
+        outline: none;
+        background: #ffffff;
+    }
+
+    .Form .button{
+        text-align: center;
+    }
+    .Form .btn{
+        width: 50%;
+        border-radius: 5px;
+        font-size: 14px;
+        height: 45px;
+        font-weight: 400;
+        text-transform: capitalize;
+        letter-spacing: 1px;
+    }
+
+    .Form .button .btn.btn-primary {
+        width: 50%;
+        margin: 20px 0 0px;
+        background: #595a99;
+        border: 0px solid #595a99;
+        color: #ffffff;
+    }
+
+    .Form .button .btn.btn-primary:hover {
+        background: #3E4095;
+        border: 0px solid #3E4095;
+        color: #ffffff;
+    }
+    .Form .Social-sign-in{
+        font-size: 14px;
+        text-decoration: none;
+        text-align: left;
+        font-weight: 600;
+        color: #3E4095;
+        padding-bottom: 0;
+
+    }
+    .Form .Social-sign-in-fluid{
+        width: 12%;
+        border-radius: 50%;
+        cursor: pointer;
+        padding: 5px;
+        transition: transform .2s; /* Animation */
+
+    }
+    .Form .Social-sign-in-fluid:hover {
+        transform: scale(1.3); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+    }
+    .Form .forget{
+        margin-top: 0;
+        padding-top: 0;
+        font-size: 13px;
+        text-decoration: none;
+        text-align: left;
+        color: red;
+        font-weight: 600;
+    }
+
+
+    .Form-image{
+        text-align: center;
+        margin-top: 10%;
+        margin-bottom: 20%;
+    }
+
+    .Form-image .img-fluid{
+        width: 70%;
+
+    }
+
+    .Form-image .img-register{
+        width: 90%;
+        margin-bottom: 40px;
+    }
+    .Form-image .register{
+        font-size: 15px;
+        text-align: center;
+        color: #3E4095;
+        font-weight: 600;
+    }
+
+
 }
