--- a/src/components/HomeNavbar/styles.css
+++ b/src/components/HomeNavbar/styles.css
@@ -1,17 +1,24 @@
 .Home-navbar{
-    padding: 10px;
+    padding: 10px 0px 10px 10px;
     margin-bottom: 20px;
     box-shadow: 0px 2px 2px 1px rgba(0,0,0,0.75);
     -webkit-box-shadow: 0px 2px 2px 1px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 2px 2px 1px rgba(0,0,0,0.75);
 }
+.Home-navbar .navbar-brand .logo-fluid{
+     width: 8%;
+
+ }
+
 .Home-navbar .navbar-brand{
     font-size: 25px;
     font-weight: 800;
     letter-spacing: 1px;
     color: #3E4095;
     text-transform: uppercase;
+    float: left;
 }
+
 .Home-navbar ul{
     list-style: none;
 }
@@ -22,18 +29,57 @@
     display: inline-block;
 }
 .Home-navbar ul .buttons{
+
     float: right;
-    width: 50%;
+    width: 40%;
+
 }
 .Home-navbar ul .buttons .btn{
     font-size: 16px;
     font-weight: 500;
-    border-radius: 10px;
-    padding: 8px 20px;
+    border-radius: 15px;
+    padding: 5px 25px;
     color: #ffffff;
+    margin-top: 0;
 
-    box-shadow: -1px 1px 2px 1px rgba(69,69,69,0.75);
-    -webkit-box-shadow: -1px 1px 2px 1px rgba(69,69,69,0.75);
-    -moz-box-shadow: -1px 1px 2px 1px rgba(69,69,69,0.75);
 }
+@media only screen and (max-width: 600px) {
+    .Home-navbar{
+        padding: 10px 0px 10px 10px;
+        margin-bottom: 20px;
+    }
+    .Home-navbar .navbar-brand .logo-fluid{
+        width: 13%;
 
+    }
+
+    .Home-navbar .navbar-brand{
+        font-size: 16px;
+        font-weight: 800;
+        letter-spacing: 1px;
+        color: #3E4095;
+        text-transform: uppercase;
+        float: left;
+    }
+
+    .Home-navbar ul{
+        list-style: none;
+    }
+    .Home-navbar ul li{
+        font-size: 16px;
+        font-weight: 600;
+        margin-right: 20px;
+        display: inline-block;
+    }
+    .Home-navbar ul .buttons{
+        float: none;
+        width: 100%;
+        margin-bottom: 5%;
+
+    }
+    .Home-navbar ul .buttons .btn{
+        font-size: 12px;
+        border-radius: 5px;
+        padding: 3px 10px;
+    }
+}
