--- a/src/Dashboard/styles.css
+++ b/src/Dashboard/styles.css
@@ -155,6 +155,7 @@
     padding: 20px 20px;
     background: #ffffff;
     height: 150px;
+    width: 100%;
 
     box-shadow: 0px 0px 3px 3px rgba(217,215,253,0.75);
     -webkit-box-shadow: 0px 0px 3px 3px rgba(217,215,253,0.75);
@@ -168,6 +169,7 @@
     color: #3E4095;
 }
 .Category-box p {
+    word-wrap:break-word;
     font-size: 14px;
     font-weight: 400;
     color: #939694;
