--- a/src/Shop/styles.css
+++ b/src/Shop/styles.css
@@ -392,6 +392,19 @@ Qv-Modal-styles .Close-button .fas{
     font-size: 18px;
 }
 
+
+/*more in this collection styles*/
+.More-collection{
+    margin-top: 5%;
+    padding: 20px;
+}
+.More-collection h5{
+    text-align: center;
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
 /*.Prod-head h6{*/
 /*    font-size: 14px;*/
 /*    font-weight: 600;*/
