--- a/src/Shop/styles.css
+++ b/src/Shop/styles.css
@@ -435,6 +435,9 @@ Qv-Modal-styles .Close-button .fas{
     font-weight: 600;
     font-size: 16px;
 }
+.Cart-page .table-section .table{
+    background: #ffffff;
+}
 .Cart-page .table-section .table th{
     font-size: 14px;
     color: #525252;
@@ -443,7 +446,20 @@ Qv-Modal-styles .Close-button .fas{
 .Cart-page .table-section .table .th-product{
  width: 70%;
 }
-
+.Cart-page .table-section .table tbody .Img-box{
+    float: left;
+    width: 120px;
+    height: 150px;
+}
+.Cart-page .table-section .table tbody .Img-box .img-fluid{
+    max-width: 100%;
+    max-height: 100%;
+}
+.Cart-page .table-section .table tbody td p{
+    font-size: 14px;
+    color: #525252;
+    margin-top: 50px;
+}
 /*category page styles*/
 .Category-page .bread-crumb ul{
     padding: 10px 0;
