--- a/src/Shop/account/styles.css
+++ b/src/Shop/account/styles.css
@@ -20,8 +20,30 @@
 .auth-tab ul li .not-active:hover{
     background: #525252;
 }
+.auth-login{
+    padding: 0px 40px;
+}
+.auth-login h5{
+    text-align: left;
+    font-size: 22px;
+    font-weight: 700;
+    padding: 0px 0 20px;
+}
+.auth-login .form-group{
+    margin-bottom: 30px;
+}
 .auth-login .form-group.button{
     text-align: center;
+}
+.auth-login .form-group label{
+    font-weight: 600;
+    font-size: 14px;
+    color: #2e2e2e;
+}
+.auth-login .form-group .form-control{
+    border-radius: 1px;
+    height: 45px;
+
 }
 .auth-login .form-group.button p{
     font-size: 13px;
