--- a/src/Shop/checkout/Styles.css
+++ b/src/Shop/checkout/Styles.css
@@ -187,7 +187,9 @@
     font-size: 13px;
     border-radius: 1px;
 }
-.Checkout-information .form-group .btn{
+
+/*checkout button styles*/
+.form-group .btn{
     border-radius: 5px;
     color: #ffffff;
     font-size: 13px;
@@ -197,17 +199,16 @@
     background: #7d7d7d;
     border: 0 solid #2e2e2e;
 }
-.Checkout-information .form-group .btn:hover{
+.form-group .btn:hover{
     background: #525252;
 }
-
-.Checkout-information .form-group p{
+.form-group p{
     padding-top: 20px;
     font-size: 14px;
     border-radius: 1px;
     color:#525252;
 }
-.Checkout-information .form-group p .link{
+.form-group p .link{
     color:#525252;
     text-decoration: none;
 }
@@ -215,7 +216,7 @@
 /*SHipping Styles*/
 .Shipping{
     padding: 20px;
-    /*background: #f0f0ff;*/
+    background: #f0f0ff;
     margin-bottom: 20px;
 }
 
@@ -223,11 +224,227 @@
     font-size: 13px;
     color: #7d7d7d;
 }
+.Shipping-address .total .text-head{
+    font-size: 16px;
+    color: #2e2e2e;
+    font-weight: 600;
+}
+.Shipping-address .total p{
+    font-size: 18px;
+    color: #2e2e2e;
+    font-weight: 600;
+}
+.Shipping-address p.left{
+    text-align: right;
+}
 .Shipping-address p{
     font-size: 13px;
     color: #7d7d7d;
+    padding-bottom: 0;
 }
 .Shipping-address .link{
     font-size: 12px;
     color: #7d7d7d;
+    text-decoration: none;
+}
+.Shipping-address{
+    border: 1px solid #adadad;
+    border-radius: 5px;
+    padding-bottom: 0;
+    margin-bottom: 10%;
+}
+.Shipping-address .table .top td {
+    border-top-width: 0;
+}
+
+.Shipping-address .table tr td {
+  padding-bottom: 0;
+}
+.Shipping-method h6{
+    font-size: 15px;
+    color: #525252;
+    font-weight: 600;
+    padding-bottom: 10px;
+}
+.Shipping-method .Shipping-method-table .form-check {
+    cursor: pointer;
+}
+.Shipping-method .Shipping-method-table .form-check .form-check-label{
+    font-size: 13px;
+    color: #939694;
+    cursor: pointer;
+}
+.Shipping-method .Shipping-method-table {
+    font-size: 13px;
+    font-weight: 600;
+}
+
+
+
+
+/*Payment styles*/
+.Payment{
+    padding: 20px;
+    background: #f0f0ff;
+    margin-bottom: 20px;
+}
+.Payment-method h5{
+    font-size: 16px;
+    color: #525252;
+    font-weight: 600;
+}
+.Payment-method h6{
+    font-size: 13px;
+    color: #939694;
+    font-weight: 400;
+    padding-bottom: 10px;
+}
+.Payment-method .Payment-method-list h4{
+    font-size: 12px;
+    color: #525252;
+    padding: 20px;
+    font-weight: 700;
+    text-transform: uppercase;
+    cursor: pointer;
+    margin-bottom: 20px;
+    background: #fff;
+    width: 70%;
+    border-radius: 5px;
+}
+.Payment-method .Payment-method-list h4.active{
+    background: #2e2e2e;
+    color: #ffffff;
+
+}
+
+.Payment-method .Payment-method-list h4 .small{
+    font-size: 12px;
+    color: #adadad;
+    font-weight: 400;
+    text-transform: lowercase;
+}
+.Payment-method .Payment-method-list h4.active .small{
+    color: #f2f2f2;
+}
+
+/*Order confirmation styles*/
+.Order-confirmation{
+    padding: 20px;
+    /*background: #f0f0ff;*/
+    margin-bottom: 20px;
+}
+.Order-confirmation .far{
+    font-size: 70px;
+    float: left;
+    padding-right: 20px;
+}
+.Order-confirmation .Thank-you .text{
+  margin-bottom: 10%;
+}
+.Order-confirmation .Thank-you .text h6{
+    font-size: 14px;
+    font-weight: 400;
+    margin-bottom: 0;
+
+}
+.Order-confirmation .Thank-you .text h4{
+    font-size: 25px;
+    font-weight: 400;
+}
+.order-box{
+    border-radius: 5px;
+    border: 1px solid #939694;
+    padding: 15px;
+    margin-bottom: 5%;
+}
+.order-box h4{
+    font-size: 18px;
+    font-weight: 400;
+    color: #525252;
+}
+.order-box p{
+    font-size: 13px;
+    font-weight: 400;
+    color: #525252;
+}
+.Order-updates .btn {
+    border-radius: 5px;
+    border: 1px solid #525252;
+    color: #525252;
+    padding: 10px 30px;
+    font-size: 14px;
+    font-weight: 600;
+    background: #f2f2f2;
+    letter-spacing: 1px;
+    margin-right: 20px;
+}
+
+.Order-updates button.btn-success {
+    text-transform: lowercase;
+    background: #61dafb;
+    letter-spacing: 1px;
+    margin-left: 20px;
+}
+
+.Contact-info h5{
+    margin-top: 10px;
+    font-size: 14px;
+    font-weight: 600;
+    color: #2e2e2e;
+}
+.Contact-info p{
+    font-size: 13px;
+    font-weight: 400;
+    color: #939694;
+}
+
+.Order-confirmation th {
+    font-size: 14px;
+    color: #525252;
+    border-top-width: 0;
+}
+
+.Order-confirmation td p{
+    padding-top: 5px;
+}
+.Order-confirmation td .title{
+    font-size: 13px;
+    font-weight: 600;
+    word-wrap: break-word;
+}
+.Order-confirmation td .amount{
+    font-size: 13px;
+    font-weight: 600;
+    text-align: right;
+}
+
+.Order-confirmation .Sub-total td{
+    padding: 0;
+}
+.Order-confirmation .Sub-total ul{
+    list-style: none;
+    padding-left: 0;
+    margin-left: 0;
+}
+.Order-confirmation .Sub-total ul li{
+    font-size: 12px;
+    color: #525252;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+.Order-confirmation .Sub-total ul .price{
+    float: right;
+}
+.Order-confirmation .Sub-total ul .price.money{
+    font-size: 12px;
+    font-weight: 600;
+}
+.Order-confirmation .Total-section td .total{
+    font-size: 12px;
+    font-weight: 600;
+}
+.Order-confirmation .Total-section td .total-price{
+    font-size: 15px;
+    font-weight: 600;
+    float: right;
 }
