--- a/src/Shop/checkout/Styles.css
+++ b/src/Shop/checkout/Styles.css
@@ -299,27 +299,41 @@
     font-weight: 400;
     padding-bottom: 10px;
 }
+.Payment-method .Payment-method-list h4.paystack .img-fluid{
+    width: 40%;
+}
+.Payment-method .Payment-method-list h4.klump{
+    color: #ffffff;
+    background: #192c69;
+}
+.Payment-method .Payment-method-list h4.klump .img-fluid{
+    width: 30%;
+}
+.Payment-method .Payment-method-list h4 .img-fluid{
+    width: 50%;
+}
 .Payment-method .Payment-method-list h4{
-    font-size: 12px;
-    color: #525252;
-    padding: 20px;
+    font-size: 15px;
+    color: #2e2e2e;
+    padding: 10px 20px;
+    height: 55px;
     font-weight: 700;
-    text-transform: uppercase;
+    text-transform: capitalize;
     cursor: pointer;
     margin-bottom: 20px;
     background: #fff;
     width: 70%;
     border-radius: 5px;
-}
-.Payment-method .Payment-method-list h4.active{
-    background: #2e2e2e;
-    color: #ffffff;
 
+    box-shadow: 2px 2px 3px 1px rgba(105,105,105,0.75);
+    -webkit-box-shadow: 2px 2px 3px 1px rgba(105,105,105,0.75);
+    -moz-box-shadow: 2px 2px 3px 1px rgba(105,105,105,0.75);
 }
+
 
 .Payment-method .Payment-method-list h4 .small{
     font-size: 12px;
-    color: #adadad;
+    color: #f2f2f2;
     font-weight: 400;
     text-transform: lowercase;
 }
