--- a/src/Home/styles.css
+++ b/src/Home/styles.css
@@ -17,6 +17,14 @@
 .Nav-header {
     background: transparent;
 }
+.Nav-header.bg {
+    background: #ffffff;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.Nav-header #bg{
+    background: #ffffff;
+}
 .Nav-header .navbar{
     background: transparent;
     padding: 20px 30px 5px 0px;
@@ -335,22 +343,14 @@
     }
     .Hero-section .Hero-text h2{
         position: relative;
-        margin-top: 50px;
+        margin-top: 80px;
         font-size: 30px;
         font-weight: 600;
         color: #3E4095;
         z-index: 1;
     }
     .Hero-section .Hero-text .line{
-        background: #DDDDAA;
-        position: absolute;
-        height: 8px;
-        width: 260px;
-        top: 92px;
-        margin-right: 0px;
-        margin-left: 60px;
-        margin-bottom: 0;
-        padding-bottom: 0;
+        display: none;
     }
 
     .Hero-section .Hero-text p{
