--- a/src/Authentication/styles.css
+++ b/src/Authentication/styles.css
@@ -132,6 +132,13 @@ body{
     width: 70%;
 
 }
+.Form-forgot{
+    text-align: center;
+}
+.Form-forgot .img-fluid{
+    width: 80%;
+
+}
 
 .Form-image .img-register{
     width: 90%;
@@ -142,13 +149,21 @@ body{
     text-align: center;
     color: #3E4095;
     font-weight: 600;
+    text-decoration: underline;
 }
-
+.Form-forgot .register{
+    font-size: 15px;
+    text-align: center;
+    color: #3E4095;
+    font-weight: 600;
+    text-decoration: underline;
+}
 /* Media screen 600px */
+
 @media only screen and (max-width: 600px) {
 
     .Auth-box{
-        margin: 10% 5% 7% 5%;
+        margin: 15% 5% 7% 5%;
     }
 
     .Form {
@@ -158,24 +173,22 @@ body{
         margin-top: 10%;
     }
     .Form h5{
-        font-size: 30px;
+        text-align: center;
+        font-size: 28px;
+        padding-bottom: 10px;
     }
     .Form .form-group{
-        margin-bottom: 10%;
+        margin-bottom: 5%;
         padding: 5px;
     }
     .Form .form-group .Input-box{
-        border-bottom-width: 1px;
-        border-bottom-style: solid;
-        border-bottom-color: #3E4095;
-        background: #ffffff;
         width: 100%;
-        height: 40px;
+        height: 35px;
         padding: 0px;
     }
     .Form .form-group label{
         margin-top: 10px;
-        font-size: 14px;
+        font-size: 12px;
         font-weight: 600;
         color: #3E4095;
         padding-bottom: 0;
@@ -183,19 +196,13 @@ body{
     .Form .form-group .Input-box input{
         border: 0px solid transparent;
         border-radius: 0px;
-        font-size: 14px;
+        font-size: 12px;
         background: #ffffff;
         padding: 10px 15px 0;
         float: right;
         width: 90%;
     }
 
-    .Form .form-group .Input-box input:focus{
-        border: 0px solid transparent;
-        border-radius: 0px;
-        outline: none;
-        background: #ffffff;
-    }
 
     .Form .button{
         text-align: center;
@@ -203,8 +210,8 @@ body{
     .Form .btn{
         width: 50%;
         border-radius: 5px;
-        font-size: 14px;
-        height: 45px;
+        font-size: 12px;
+        height: 35px;
         font-weight: 400;
         text-transform: capitalize;
         letter-spacing: 1px;
@@ -212,7 +219,9 @@ body{
 
     .Form .button .btn.btn-primary {
         width: 50%;
-        margin: 20px 0 0px;
+        height: 40px;
+        font-size: 13px;
+        margin: 10px 0 0px;
         background: #595a99;
         border: 0px solid #595a99;
         color: #ffffff;
@@ -224,7 +233,7 @@ body{
         color: #ffffff;
     }
     .Form .Social-sign-in{
-        font-size: 14px;
+        font-size: 12px;
         text-decoration: none;
         text-align: left;
         font-weight: 600;
@@ -256,7 +265,7 @@ body{
 
     .Form-image{
         text-align: center;
-        margin-top: 10%;
+        margin-top: 0;
         margin-bottom: 20%;
     }
 
@@ -270,7 +279,7 @@ body{
         margin-bottom: 40px;
     }
     .Form-image .register{
-        font-size: 15px;
+        font-size: 13px;
         text-align: center;
         color: #3E4095;
         font-weight: 600;
