--- a/src/Dashboard/dashStyles.css
+++ b/src/Dashboard/dashStyles.css
@@ -9,6 +9,26 @@
     padding: 0.8rem 1rem;
 }
 
+.screen-overlay {
+    width: 0%;
+    height: 100%;
+    z-index: 30;
+    position: fixed;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    visibility: hidden;
+    background-color: rgba(34, 34, 34, 0.6);
+    transition: opacity 0.2s linear, visibility 0.1s, width 1s ease-in;
+}
+
+.screen-overlay.show {
+    transition: opacity 0.5s ease, width 0s;
+    opacity: 1;
+    width: 100%;
+    visibility: visible;
+}
+
 /* =================  DEFINED VARIABLES =================== */
 .icon-xs, .icon-sm, .icon-md, .icon-lg {
     display: inline-flex;
@@ -102,6 +122,10 @@ body{
     position: relative;
     min-height: 100vh;
 }
+body.offcanvas-active {
+    overflow: hidden;
+}
+
 .main-wrap{
     margin-left: 260px;
 }
